[package]
name = "rust_lib_recombox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
arc-swap = "1.8.2"

librqbit = {version = "8.1.1"}
librqbit-core = "5.0.0"
tokio = {version = "1.50.0", features = ["full"]}
tokio-util = "0.7.18"
anyhow = "1.0.102"
serde = "1.0.228"
serde_json = "1.0.149"
futures = "0.3.32"
bytes = "1.11.1"
dashmap = "6.1.0"
actix-web = "4.13.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
