[package]
name = "rust_lib_recombox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
arc-swap = "1.9.0"

librqbit = { version = "8.1.1", default-features = false, features = ["rust-tls"] }
tokio = {version = "1.50.0", features = ["full"]}
tokio-util = "0.7.18"
anyhow = "1.0.102"
serde = "1.0.228"
serde_json = "1.0.149"
futures = "0.3.32"
bytes = "1.11.1"
dashmap = "6.1.0"
actix-web = { version = "4.13.0", features = ["rustls"] }
reqwest = {version = "0.12.28", default-features = false, features = ["rustls-tls", "json", "multipart", "blocking", "stream"]}
once_cell = "1.21.4"
chrono = "0.4.44"
redb = "4.0.0"
snowid = "2.0.3"
recombox_metadata_provider = { git = "https://github.com/RecomBox/recombox_metadata_provider"}
recombox_plugin_provider = { git = "https://github.com/RecomBox/recombox_plugin_provider"}
urlencoding = "2.1.3"
num_cpus = "1.17.0"
semver = "1.0.28"



[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

